#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(session_count, 0.0.1, 85358830@qq.com)

#AM_INIT_AUTOMAKE(session_count,0.0.1)
AM_INIT_AUTOMAKE([subdir-objects])
AC_CONFIG_SRCDIR([src/session_count.c])
AC_CONFIG_HEADERS([config.h])
${CFLAGS="-g `pkg-config --cflags --libs glib-2.0`"}
#${CFLAGS="-g "}

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
